--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -92,6 +92,11 @@ nav a{
 
 /* main section styles */
 
+main{
+    max-width: 1140px;
+    margin: auto;
+}
+
 /* about section styles */
 
 .about{
@@ -100,4 +105,11 @@ nav a{
     border-radius: 10px;
     background: #FFF8F3;
     margin:130px ;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-inf{
+    text-align: center;
 }
