--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -97,6 +97,10 @@ main{
     margin: auto;
 }
 
+main section{
+    margin-top: 130px;
+}
+
 /* about section styles */
 
 .about{
@@ -114,6 +118,32 @@ main{
     text-align: center;
 }
 
+/* skills related styles */
+
 #what-i-do-description{
     padding: 30px 150px;
+    
+
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 33px;
+    
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+
+/* Resume Section Styles */
+
+.resume_column-title{
+    color: var#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
