--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -173,3 +173,13 @@ main section{
     text-align: center;
     margin-top: 50px;
 }
+
+/* Footer Styles */
+
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 130px;
+    padding: 130px 200px;
+
+}
